--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>KumariNidhiportfoliohome</title>
+	<title>Kumari Nidhi</title>
 	<link rel="stylesheet" href="stylesheets/portfolio.css">
 	<script src="JSfiles/portfolio.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
